# DocRebuild-AI

./: .env  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  README.md  docker-compose.yml  docker_deployment_guide.md
.serena/: project.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: documents.py  health.py  jobs.py  pages.py  reports.py  router.py  websocket.py
backend/app/models/: __init__.py  document.py  job.py  page.py  report.py
backend/app/schemas/: __init__.py  document.py  job.py  page.py  report.py
backend/app/utils/: bbox_utils.py  constants.py  image_utils.py  pdf_utils.py  text_utils.py
backend/data/outputs/057be964-041c-4d70-bfb6-f0fdbc3a3d30/: test_document_reconstructed.docx
backend/engines/: __init__.py  model_manager.py
backend/engines/language/: __init__.py  bangla_validator.py
backend/engines/layout/: __init__.py  doclayout_yolo.py  layout_fusion.py
backend/engines/math/: __init__.py  pix2tex_engine.py
backend/engines/ocr/: __init__.py  base_ocr.py  doctr_engine.py  easyocr_engine.py  ensemble.py  paddle_engine.py  surya_engine.py  tesseract_engine.py  trocr_engine.py
backend/engines/tables/: __init__.py  table_transformer.py
backend/engines/understanding/: __init__.py  docling_engine.py  marker_engine.py
backend/engines/vision/: __init__.py  florence2_engine.py  internvl_engine.py  qwen_vl_engine.py
backend/qa/: __init__.py  qa_pipeline.py
backend/reconstruction/: MML2OMML.XSL  __init__.py  docx_builder.py  equation_builder.py  image_inserter.py  page_builder.py  style_manager.py  table_builder.py
backend/workers/: celery_app.py
backend/workers/tasks/: bangla_validation.py  document_understanding.py  docx_reconstruction.py  layout_analysis.py  math_recognition.py  ocr_ensemble.py  orchestrator.py  pdf_ingestion.py  quality_assurance.py  run_understanding_sub.py  self_correction.py  table_extraction.py  vision_validation.py  visual_verification.py
frontend/: nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
scratch/: test_db_delete.py
