[project]
name = "docrebuild-ai"
version = "1.0.0"
description = "Production-grade Document Reconstruction Platform"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",

    # PDF Processing
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.4.0",

    # DOCX Generation
    "python-docx>=1.1.0",
    "math2docx>=0.1.0",
    "latex2mathml>=3.77.0",
    "lxml>=5.3.0",

    # OCR Engines
    "surya-ocr>=0.17.1,<0.18.0",
    "paddleocr>=2.9.0",
    "pytesseract>=0.3.13",
    "easyocr>=1.7.2",
    "python-doctr[torch]>=0.9.0",

    # AI / ML
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.46.0",
    "huggingface-hub>=0.26.0",
    "einops>=0.8.0",
    "accelerate>=0.33.0",
    "sentencepiece>=0.2.0",

    # Layout Analysis
    "doclayout-yolo>=0.0.3",
    "layoutparser>=0.3.4",

    # Document Understanding
    "docling>=2.0.0",
    "marker-pdf>=1.0.0",
    "nougat-ocr>=0.1.17",

    # Table Extraction
    "camelot-py[cv]>=0.11.0",
    "tabula-py>=2.9.0",

    # Math Recognition
    "pix2tex>=0.1.0",

    # Text Processing
    "rapidfuzz>=3.10.0",
    "python-Levenshtein>=0.26.0",
    "regex>=2024.9.0",

    # Image Processing
    "opencv-python-headless>=4.10.0",
    "scikit-image>=0.24.0",
    "numpy>=1.26.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0,<0.28.0",
    "aiofiles>=24.1.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0,<0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

gpu = [
    "paddlepaddle-gpu>=3.0.0",
    "detectron2>=0.6",
]

vision = [
    "flash-attn>=2.6.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
